syntax = "proto3";

<<<<<<< HEAD
package school;

service StudentService {
    rpc GetStudent(Empty) returns (Student);
}

message Empty {

}


message Student {
    int32 student_id = 1;
    string first_name = 2;
    string last_name = 3;
}

message StudentId {
    int32 id = 1;
=======
package perfume;

service PerfumeService {
    rpc GetPerfume(PerfumeId) returns (Perfume);
}

message PerfumeId {
    int32 id = 1;
}

message Perfume {
    int32 id = 1;
    string name = 2;
    string brand = 3;
>>>>>>> df7623a (Poprawa projektu wraz z dodaniem poprawnego graphql)
}